--- a/_posts/2023-01-29-ide-kerjaan-2023.md
+++ b/_posts/2023-01-29-ide-kerjaan-2023.md
@@ -14,7 +14,7 @@ Ide kerjaan ini bisa dicoba oleh siapapun yang benar-benar mau berkomitmen tingg
 
 # 1. Content Creator
 
-![content creator]({{ site.baseurl }}/assets/img/pexels-pnw-production-9218702.jpg)
+![content creator]({{ site.baseurl }}/assets/img/pexels-pnw-production-9218702.jpg){: .mx-auto.d-block :}
 
 Belakangan ini bermunculan berbagai platform social media baru seperti Tiktok. Di saat itu pula muncullah berbagai profesi baru yang sebelumnya nggak pernah terbayangkan. Orang-orang menyebutnya dengan nama: **content creator**.
 
@@ -24,7 +24,7 @@ Profesi content creator tidak melekat pada platform Tiktok saja, namun bersifat 
 
 # 2. Admin Social Media
 
-![admin social media]({{ site.baseurl }}/assets/img/pexels-cottonbro-studio-5081917.jpg)
+![admin social media]({{ site.baseurl }}/assets/img/pexels-cottonbro-studio-5081917.jpg){: .mx-auto.d-block :}
 
 Kalo kamu suka main social media, ada baiknya mencoba profesi satu ini. Coba kamu melamar ke online shop yang lagi butuh Admin Social Media.
 
@@ -34,7 +34,7 @@ Biasanya jadi Admin Social Media itu harus punya kemampuan komunikasi yang baik,
 
 # 3. Content Writer
 
-![content writer]({{ site.baseurl }}/assets/img/pexels-vlada-karpovich-4050290.jpg)
+![content writer]({{ site.baseurl }}/assets/img/pexels-vlada-karpovich-4050290.jpg){: .mx-auto.d-block :}
 
 Serupa dengan profesi content creator, kali ini giliran pekerjaan bernama Content Writer. Intinya bikin konten tapi khusus artikel saja.
 
@@ -42,7 +42,7 @@ Sampai saat ini profesi Content Writer masih sangat dibutuhkan, karena masih ban
 
 # 4. Voice Over Talent
 
-![voice over talent]({{ site.baseurl }}/assets/img/pexels-george-milton-6953867.jpg)
+![voice over talent]({{ site.baseurl }}/assets/img/pexels-george-milton-6953867.jpg){: .mx-auto.d-block :}
 
 Kalo kamu punya suara yang oke dan mampu berucap dengan jelas, cobain profesi satu ini. Seorang voice over talent dibutuhkan untuk mengisi narasi berita, iklan, film pendek dan berbagai output audio media digital lainnya.
 
@@ -50,12 +50,12 @@ Kerjaan ini tampaknya simpel, tapi butuh gaya hidup yang sehat. Karena suara kam
 
 # 5. Freelance Writer
 
-![freelance writer]({{ site.baseurl }}/assets/img/pexels-karolina-grabowska-4467735.jpg)
+![freelance writer]({{ site.baseurl }}/assets/img/pexels-karolina-grabowska-4467735.jpg){: .mx-auto.d-block :}
 
 Ide kerjaan kelima ini bisa kamu cobain kalo kamu punya minat di dunia tulis-menulis. Kamu bisa mulai mempromosikan portofolio tulisan kamu di berbagai situs freelancer. Biar kamu mudah ditemukan pencari jasa yang kamu kuasai ini, kamu harus bisa "menjual diri" kamu di internet.
 
 ---
 
-Itulah 5 Ide Kerjaan yang Cocok Kamu Cobain di Tahun 2023. Kerjaannya seolah seperti main-main, tapi percayalah bahwa dibutuhkan komitmen kuat untuk menjalaninya. 
+Itulah **5 Ide Kerjaan yang Cocok Kamu Cobain di Tahun 2023**. Kerjaannya seolah seperti main-main, tapi percayalah bahwa dibutuhkan komitmen kuat untuk menjalaninya. 
 
 Ketekunan akan menemukan jalannya. Selamat mencoba, teman!
